# comm-unified-l10n

./: .arcconfig  .gecko_rev.yml  .gitignore  .hgtags  .prettierignore  .stylelintignore  .taskcluster.yml  LICENSE  README.md  cinnabar-rev  mots.yaml  package-lock.json  package.json  tsconfig.json
rust/ms_graph_tb/: Cargo.toml
rust/ms_graph_tb/ms_graph_tb_extract/: supported_enums.txt  supported_objects.txt
rust/ms_graph_tb/ms_graph_tb_extract/src/: main.rs  oxidize.rs
rust/ms_graph_tb/ms_graph_tb_extract/src/extract/: path.rs  schema.rs
rust/ms_graph_tb/ms_graph_tb_extract/src/extract/schema/: object.rs
rust/ms_graph_tb/ms_graph_tb_extract/src/openapi/: path.rs  schema.rs
rust/ms_graph_tb/ms_graph_tb_extract/src/oxidize/: enums.rs  paths.rs  structs.rs
rust/ms_graph_tb/src/: batching.rs  extended_properties.rs  lib.rs  odata.rs  pagination.rs
rust/ms_graph_tb/src/paths/: me.rs
rust/ms_graph_tb/src/paths/me/: mail_folders.rs  messages.rs
rust/ms_graph_tb/src/paths/me/mail_folders/: delta.rs  mail_folder_id.rs
rust/ms_graph_tb/src/paths/me/mail_folders/mail_folder_id/: child_folders.rs  copy.rs  messages.rs  (+1 more)
rust/ms_graph_tb/src/paths/me/messages/: message_id.rs
rust/ms_graph_tb/src/types/: directory_object.rs  email_address.rs  entity.rs  followup_flag.rs  followup_flag_status.rs  importance.rs  internet_message_header.rs  item_body.rs  mail_folder.rs  mail_folder_collection_response.rs  mailbox_settings.rs  message.rs  message_collection_response.rs  mod.rs  outlook_item.rs  recipient.rs  single_value_legacy_extended_property.rs  user.rs
(+705 files in other folders)
