[package]
name = "ms_graph_tb"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
form_urlencoded = "1.2.2"
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[lints]
workspace = true
